# Neuravia

./: .gitignore  README.md  badchange.patch  env_phase0.json  fix_changed.patch  mychange.patch  pyproject.patch.txt  pyproject.toml
agents/: README.md
config/: README.md  defaults.toml
config/profiles/: balanced.toml  danger.toml  safe.toml
core/: README.md
data/: README.md  memory.db
data/logs/: chain.jsonl
data/sandbox/demo/: fs_ok.txt
neuravia/: cli.py  config.py  meta_agent.py
neuravia/agent/: loop.py  runner.py
neuravia/autoimprove/: __init__.py  diff_apply.py  patcher.py  runner.py  workflow.py
neuravia/core/: agents.py  orchestrator.py  policies.py  types.py
neuravia/llm/: __init__.py  base.py  demo.py  dummy.py  ollama.py
neuravia/memory/: agent_memory.py  db.py  index.py
neuravia/security/: kill.py
neuravia/tools/: __init__.py  chainlog.py  errors.py  files.py  logs.py  ocr.py  screen.py  shell.py
neuravia/web/: app.py  server.py
scripts/: install_linux.sh  install_win.ps1  neuravia-web.bat  neuravia.bat
tests/: test_agent_loop.py  test_auto_diff_apply.py  test_auto_runner.py  test_auto_workflow.py  test_chainlog.py  test_cli.py  test_cli_llm_flag.py  test_cli_memory.py  test_config.py  test_kill_switch.py  test_llm_demo_cli.py  test_llm_dummy.py  test_llm_ollama_detect.py  test_memory_db.py  test_memory_index.py  test_package.py  test_tools_filesystem.py  test_tools_logs.py  test_tools_ocr.py  test_tools_ocr_image.py  test_tools_screen.py  test_tools_shell.py  test_web_api.py  test_web_files.py  test_web_sse.py
ui/: README.md
(+6 files in other folders)
